oxiplate-derive/tests/crates/unreachable/tests/broken/adding-item-to-if-after-ended.stderr
error: Internal Oxiplate error: Attempted to add item to ended `if` statement
 --> tests/broken/adding-item-to-if-after-ended.rs:4:46
  |
4 | #[oxiplate_inline(r#"{% if true %}{% endif %}{{ "b" }}"#)]
  |                                              ^^^^^^^^^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Attempted+to+add+item+to+ended+%60if%60+statement&labels=internal+error&body=Error%3A%0A%0A%60%60%60text%0APASTE_FULL_ERROR_HERE%0A%60%60%60%0A%0ATemplate%3A%0A%0A%60%60%60%0APASTE_TEMPLATE_HERE%0A%60%60%60

error: proc-macro derive panicked
 --> tests/broken/adding-item-to-if-after-ended.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/adding-item-to-if-after-ended.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/adding-item-to-if-after-ended.rs:5:1
  |
5 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
